# robocon

./: .bumpversion.cfg  .dockerignore  .env.example  CHANGELOG.md  Dockerfile  Dockerfile.test  Makefile  README.md  build.sh  docker-compose.yml  pyproject.toml  requirements.txt
api/: api.py
docs/: DOCKER.md
examples/: complex_model.rbr  drone_system.rbr  manipulation_system.rbr  navigation_stack.rbr  nodebridge_features.rbr  perception_system.rbr  ros2_model.rbr  ros_mavros.rbr  ros_model.rbr  ros_navigation.rbr  ros_turtlesim.rbr  slam_system.rbr  turtlesim.rbr
examples/conditional_bridging/: README.md  smart_sensor.rbr
examples/transformations/: README.md  demo.py  temp_monitor.rbr
gen_test_suite/complex_model/: ComplexRobot_bridges.py
gen_test_suite/drone_system/: DroneRobot_bridges.py
gen_test_suite/manipulation_system/: ManipulationRobot_bridges.py
gen_test_suite/navigation_stack/: NavRobot_bridges.py
gen_test_suite/perception_system/: PerceptionRobot_bridges.py
gen_test_suite/ros2_model/: MyROS2Robot_bridges.py  requirements.txt
gen_test_suite/ros_mavros/: ROSMavros_bridge.py  requirements.txt
gen_test_suite/ros_model/: MyROSRobot_bridge.py
gen_test_suite/ros_navigation/: ROSNavStack_bridge.py
gen_test_suite/ros_turtlesim/: ROSTurtleSim_bridge.py
gen_test_suite/slam_system/: MappingRobot_bridges.py
gen_test_suite/turtlesim/: TurtleSimRobot_bridges.py
robocon/: __init__.py  definitions.py  generator.py  language.py  safe_eval.py  semantics.py  utils.py
robocon/cli/: cli.py
robocon/grammar/: broker.tx  robocon.tx
robocon/m2t/: __init__.py  ros2gen.py  rosgen.py
robocon/templates/: Dockerfile.ros  Dockerfile.ros2  ros2_bridge.py.j2  ros2_bridge_classes.py.j2  ros_bridge.py.j2  ros_bridge_classes.py.j2
roboconnect/: __init__.py  generator.py  language.py  utils.py
roboconnect/cli/: cli.py
roboconnect/grammar/: broker.tx  utils.tx
roboconnect/m2t/: ros2gen.py  rosgen.py
roboconnect/templates/: requirements.txt.j2  ros2_bridge.j2  ros_bridge.j2
scripts/: test_generation.py  validate_examples.py
tests/: conftest.py  test_api.py  test_api_codegen.py  test_check_model_errors.py  test_cli.py  test_cli_extended.py  test_codegen_mappings.py  test_conditional_bridging.py  test_generator.py  test_language.py  test_language_extended.py  test_nodebridge_enhanced.py  test_nodebridge_uri_validation.py  test_ros_uri_validation.py  test_safe_eval.py  test_safe_eval_extended.py  test_semantics.py  test_tf_bridge.py  test_transformations.py  test_utils.py  test_utils_extended.py
tests/integration/: test_end_to_end.py  test_examples.py
tests/test_m2t/: __init__.py  test_ros2gen.py  test_rosgen.py
